Minor update, Add machine and new Dashboard page

--- a/AGDPMS.Shared/Components/Layout/MainLayout.razor
+++ b/AGDPMS.Shared/Components/Layout/MainLayout.razor
@@ -30,7 +30,7 @@
                     <NavLink href="/production/orders" class="nav-link text-white"><i class="bi bi-gear me-2"></i>Production Orders</NavLink>
                 </li>
                 <li class="nav-item">
-                    <NavLink href="/print/stamp-manager" class="nav-link text-white"><i class="bi bi-printer me-2"></i>In mã bảo hành</NavLink>
+                    <NavLink href="/print/stamp-manager" class="nav-link text-white"><i class="bi bi-printer me-2"></i>In tem bảo hành</NavLink>
                 </li>
             </AuthorizeView>
         </ul>
@@ -76,19 +76,13 @@
                 </NavLink>
             </li>
             <li class="nav-item">
-                <NavLink href="/print/stamp-manager" class="nav-link text-white"><i class="bi bi-printer me-2"></i><span>In mã bảo hành</span></NavLink>
+                <NavLink href="/print/stamp-manager" class="nav-link text-white"><i class="bi bi-printer me-2"></i><span>In tem bảo hành</span></NavLink>
             </li>
         </AuthorizeView>
         <li class="nav-item">
             <NavLink href="/qa/machines" class="nav-link text-white">
                 <i class="bi bi-layers me-2"></i>
                 <span>Máy móc</span>
-            </NavLink>
-        </li>
-        <li class="nav-item">
-            <NavLink href="/print/stamp-manager" class="nav-link text-white">
-                <i class="bi bi-layers me-2"></i>
-                <span>In tem</span>
             </NavLink>
         </li>
         <li class="nav-item">
