--- a/AGDPMS.Web/Components/App.razor
+++ b/AGDPMS.Web/Components/App.razor
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="_content/AGDPMS.Shared/bootstrap-icons/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="_content/AGDPMS.Shared/app.css" />
     <link rel="stylesheet" href="AGDPMS.Web.styles.css" />
-    <link rel="icon" type="image/png" href="_content/AGDPMS.Shared/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="_content/AGDPMS.Shared/images/logo.ico" />
     <HeadOutlet @rendermode="_defaultRenderMode" />
 </head>
 <body>
