--- a/AGDPMS.Shared/Components/Layout/MainLayout.razor
+++ b/AGDPMS.Shared/Components/Layout/MainLayout.razor
@@ -29,6 +29,8 @@
                 <li class="nav-item">
                     <NavLink href="/production/orders" class="nav-link text-white"><i class="bi bi-gear me-2"></i>Production Orders</NavLink>
                 </li>
+            </AuthorizeView>
+            <AuthorizeView Roles="Production Manager">
                 <li class="nav-item">
                     <NavLink href="/print/stamp-manager" class="nav-link text-white"><i class="bi bi-printer me-2"></i>In tem bảo hành</NavLink>
                 </li>
@@ -75,6 +77,8 @@
                     <span>Lệnh sản xuất</span>
                 </NavLink>
             </li>
+        </AuthorizeView>
+        <AuthorizeView Roles="Production Manager">
             <li class="nav-item">
                 <NavLink href="/print/stamp-manager" class="nav-link text-white"><i class="bi bi-printer me-2"></i><span>In tem bảo hành</span></NavLink>
             </li>
