--- a/AGDPMS.Web/Components/App.razor
+++ b/AGDPMS.Web/Components/App.razor
@@ -17,6 +17,7 @@
     <Routes @rendermode="_defaultRenderMode" />
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/AGDPMS.Shared/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="/js/print.js"></script>
 </body>
 </html>
 
